--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8,6 +8,8 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100italic,900italic,900,700italic,700,500italic,500,400italic,300italic,300,100);
+
 article,
 aside,
 details,
@@ -157,7 +159,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto",sans-serif !important;
   font-size: 13px;
   line-height: 18px;
   color: #333333;
