--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100italic,900italic,900,700italic,700,500italic,500,400italic,300italic,300,100);
+
 body {
-  font: 14px Helvetica Neue;
+  font-family: "Roboto",sans-serif !important;
+  font: 14px;
   text-rendering: optimizeLegibility;
   margin-top: 1em;
   overflow-y: scroll;
@@ -11,20 +14,20 @@ h1 {
   font-weight: 300;
 
 }
-.link { 
-	stroke: #ccc; 
+.link {
+	stroke: #ccc;
 	  font-weight: 300;
 
-	font-size: 11px; 
-	font-family: sans-serif; 
+	font-size: 11px;
+	font-family: sans-serif;
 }
-.nodetext { 
-	pointer-events: none; 
-	font-size: 11px; 
-	font-family: sans-serif; 
+.nodetext {
+	pointer-events: none;
+	font-size: 11px;
+	font-family: sans-serif;
 }
 .main{
-	border: 1px; 
+	border: 1px;
 	border-color: black
 }
 .details{
@@ -35,13 +38,12 @@ h1 {
 }
 text.link{
   stroke: black;
-  pointer-events: none; 
-  font-size: 11px; 
-  font-family: sans-serif; 
+  pointer-events: none;
+  font-size: 11px;
+  font-family: sans-serif;
 }
 arrowhead {
   stroke: #999;
   fill: #999;
   stroke-width: 1;
 }
-
